<resources>
  <string name="app_name">developer</string>
  <string name="developer_panel">Developer Panel</string>
  <string name="title_build_info">BUILD INFORMATION</string>
  <string name="label_version">Version</string>
  <string name="label_name">Name</string>
  <string name="label_package">Package</string>
  <string name="label_git_sha">GitSha</string>
  <string name="label_build_time">Build Time</string>
  <string name="title_device_info">DEVICE INFORMATION</string>
  <string name="label_make">Make</string>
  <string name="label_model">Model</string>
  <string name="label_resolution">Resolution</string>
  <string name="label_density">Density</string>
  <string name="label_release">Release</string>
  <string name="label_api">API</string>
  <string name="title_network_info">NETWORK INFORMATION</string>
  <string name="label_wifi">Wifi</string>
  <string name="label_mobile">Mobile</string>
  <string name="label_bluetooth">Bluetooth</string>
  <string name="label_air_mode">Air Mode</string>
  <string name="title_setting">Settings</string>
  <string name="label_developer">Developer</string>
  <string name="label_battery">Battery</string>
  <string name="label_location">Location</string>
  <string name="label_setting">Settings</string>
  <string name="label_app_info">App info</string>
  <string name="label_uninstall">Uninstall</string>
  <string name="title_api_info">Api</string>
  <string name="label_endpoint">Endpoint</string>
  <string name="label_delay">Delay</string>
  <string name="label_variance">Variance</string>
  <string name="label_error">Error</string>
  <string name="label_proxy">Proxy</string>
  <string name="hint_proxy_input">Please input the address of proxy</string>
  <string name="port">port</string>
  <string name="ip">ip</string>
  <string name="semicolon">:</string>
  <string name="title_third_party_tool_info">Tools</string>
  <string name="label_leak_canary">Leak Canary</string>
  <string name="label_madge">Madge</string>
  <string name="label_scalpel">Scalpel</string>
  <string name="label_scalpel_view_id">Show View Id</string>
  <string name="label_scalpel_interaction">Show 3D </string>
  <string name="label_scalpel_wireframe">Show Wireframe</string>
  <string name="label_madge_ratio">Show ratio</string>
</resources>
