<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    >
  <TextView
      android:id="@android:id/text1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/hint_proxy_input"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <TextView
      android:id="@android:id/text2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/activity_horizontal_margin"
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:layout_marginRight="@dimen/activity_horizontal_margin"
      android:layout_marginStart="@dimen/activity_horizontal_margin"
      android:text="@string/semicolon"
      app:layout_constraintBottom_toBottomOf="@+id/et_ip"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@android:id/text1"
      />

  <EditText
      android:id="@+id/et_ip"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:hint="@string/ip"
      android:inputType="text"
      app:layout_constraintEnd_toStartOf="@android:id/text2"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@android:id/text1"
      />

  <EditText
      android:id="@+id/et_port"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/port"
      android:inputType="number"
      app:layout_constraintBottom_toBottomOf="@id/et_ip"
      app:layout_constraintStart_toEndOf="@android:id/text2"
      app:layout_constraintTop_toTopOf="@id/et_ip"
      />

</androidx.constraintlayout.widget.ConstraintLayout>