<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

  <TextView
      android:id="@+id/title_api_info"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:text="@string/title_api_info"
      android:textAppearance="@style/TextAppearance.AppCompat.Body2"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <View
      android:id="@+id/group_divider"
      android:layout_width="0dp"
      android:layout_height="1dp"
      android:layout_marginLeft="@dimen/horizontal_padding"
      android:layout_marginStart="@dimen/horizontal_padding"
      android:background="@android:color/darker_gray"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/title_api_info"
      />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guide"
      android:layout_width="1dp"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.3"
      />

  <TextView
      android:id="@+id/label_endpoint"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:text="@string/label_endpoint"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintEnd_toStartOf="@id/guide"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/group_divider"
      />

  <Spinner
      android:id="@+id/spinner_endpoint"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/guide"
      app:layout_constraintTop_toTopOf="@id/label_endpoint"
      />

  <TextView
      android:id="@+id/label_delay"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:text="@string/label_delay"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintEnd_toStartOf="@id/guide"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/label_endpoint"
      />

  <Spinner
      android:id="@+id/spinner_delay"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/guide"
      app:layout_constraintTop_toTopOf="@id/label_delay"
      />

  <TextView
      android:id="@+id/label_variance"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:text="@string/label_variance"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintEnd_toStartOf="@id/guide"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/label_delay"
      />

  <Spinner
      android:id="@+id/spinner_variance"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/guide"
      app:layout_constraintTop_toTopOf="@id/label_variance"
      />

  <TextView
      android:id="@+id/label_error"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:text="@string/label_error"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintEnd_toStartOf="@id/guide"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/label_variance"
      />

  <Spinner
      android:id="@+id/spinner_error"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/guide"
      app:layout_constraintTop_toTopOf="@id/label_error"
      />

  <TextView
      android:id="@+id/label_proxy"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:text="@string/label_proxy"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintEnd_toStartOf="@id/guide"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/label_error"
      />

  <Spinner
      android:id="@+id/spinner_proxy"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/guide"
      app:layout_constraintTop_toTopOf="@id/label_proxy"
      />

</androidx.constraintlayout.widget.ConstraintLayout>