<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

  <TextView
      android:id="@+id/title_network_info"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:text="@string/title_network_info"
      android:textAppearance="@style/TextAppearance.AppCompat.Body2"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <View
      android:id="@+id/group_divider"
      android:layout_width="0dp"
      android:layout_height="1dp"
      android:layout_marginLeft="@dimen/horizontal_padding"
      android:layout_marginStart="@dimen/horizontal_padding"
      android:background="@android:color/darker_gray"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/title_network_info"
      />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guide"
      android:layout_width="1dp"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.3"
      />

  <TextView
      android:id="@+id/label_wifi"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:text="@string/label_wifi"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintEnd_toStartOf="@id/guide"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/group_divider"
      />

  <Switch
      android:id="@+id/switch_wifi"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintStart_toEndOf="@id/guide"
      app:layout_constraintTop_toTopOf="@id/label_wifi"
      />

  <TextView
      android:id="@+id/label_mobile"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:text="@string/label_mobile"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintEnd_toStartOf="@id/guide"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/label_wifi"
      />

  <Switch
      android:id="@+id/switch_mobile"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintStart_toEndOf="@id/guide"
      app:layout_constraintTop_toTopOf="@id/label_mobile"
      />

  <TextView
      android:id="@+id/label_bluetooth"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:text="@string/label_bluetooth"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintEnd_toStartOf="@id/guide"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/label_mobile"
      />

  <Switch
      android:id="@+id/switch_bluetooth"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintStart_toEndOf="@id/guide"
      app:layout_constraintTop_toTopOf="@id/label_bluetooth"
      />

  <TextView
      android:id="@+id/label_air_mode"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:text="@string/label_air_mode"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintEnd_toStartOf="@id/guide"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/label_bluetooth"
      />

  <Switch
      android:id="@+id/switch_air_mode"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintStart_toEndOf="@id/guide"
      app:layout_constraintTop_toTopOf="@id/label_air_mode"
      />

</androidx.constraintlayout.widget.ConstraintLayout>