<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

  <TextView
      android:id="@+id/title_setting"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:text="@string/title_setting"
      android:textAppearance="@style/TextAppearance.AppCompat.Body2"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <View
      android:id="@+id/group_divider"
      android:layout_width="0dp"
      android:layout_height="1dp"
      android:layout_marginLeft="@dimen/horizontal_padding"
      android:layout_marginStart="@dimen/horizontal_padding"
      android:background="@android:color/darker_gray"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/title_setting"
      />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guide"
      android:layout_width="1dp"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.3"
      />

  <TextView
      android:id="@+id/label_developer"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:labelFor="@+id/tv_developer"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:text="@string/label_developer"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintEnd_toStartOf="@id/guide"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/group_divider"
      />

  <ImageView
      android:id="@+id/iv_developer"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/label_developer"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:src="@drawable/ic_developer_mode"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/guide"
      app:layout_constraintTop_toTopOf="@id/label_developer"
      />

  <TextView
      android:id="@+id/label_battery"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:labelFor="@+id/tv_battery"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:text="@string/label_battery"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintEnd_toStartOf="@id/guide"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/label_developer"
      />

  <ImageView
      android:id="@+id/iv_battery"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/label_battery"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:src="@drawable/ic_battery_full"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/guide"
      app:layout_constraintTop_toTopOf="@id/label_battery"
      />

  <TextView
      android:id="@+id/label_location"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:text="@string/label_location"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintEnd_toStartOf="@id/guide"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/label_battery"
      />

  <ImageView
      android:id="@+id/iv_location"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/label_location"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:src="@drawable/ic_location"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/guide"
      app:layout_constraintTop_toTopOf="@id/label_location"
      />

  <TextView
      android:id="@+id/label_setting"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:text="@string/label_setting"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintEnd_toStartOf="@id/guide"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/label_location"
      />

  <ImageView
      android:id="@+id/iv_setting"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/label_setting"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:src="@drawable/ic_settings"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/guide"
      app:layout_constraintTop_toTopOf="@id/label_setting"
      />

  <TextView
      android:id="@+id/label_app_info"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:text="@string/label_app_info"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintEnd_toStartOf="@id/guide"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/label_setting"
      />

  <ImageView
      android:id="@+id/iv_app_info"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/label_app_info"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:src="@drawable/ic_settings_applications"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/guide"
      app:layout_constraintTop_toTopOf="@id/label_app_info"
      />

  <TextView
      android:id="@+id/label_uninstall"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:text="@string/label_uninstall"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintEnd_toStartOf="@id/guide"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/label_app_info"
      />

  <ImageView
      android:id="@+id/iv_uninstall"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/label_uninstall"
      android:paddingEnd="@dimen/horizontal_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      android:paddingStart="@dimen/horizontal_padding"
      android:src="@drawable/ic_delete"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/guide"
      app:layout_constraintTop_toTopOf="@id/label_uninstall"
      />
</androidx.constraintlayout.widget.ConstraintLayout>